# tubular

./: .coveragerc  .envrc.example  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .ruff.toml  CHANGELOG.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Changelog.md  LICENSE  README.md  bandit.yml  changelog.rst  data_type_casting.py  pyproject.toml  q  requirements-dev.txt  requirements.txt  ruff.toml  setup.py  tests.py
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: python-package.yml  release.yml
docs/: Makefile  README.md  requirements.txt
docs/source/: api.rst  conf.py  index.rst  quick-start.rst
examples/: profile_pd.fillna_alternatives.ipynb
examples/Data-Science-Festival-Workshop/: Demo-Filled.ipynb  Demo.ipynb  env.yml  plotting.py
examples/base/: BaseTransformer.ipynb  DataFrameMethodTransformer.ipynb  InteractionTransformer.ipynb
examples/capping/: CappingTransformer.ipynb  OutOfRangeNullTransformer.ipynb
examples/comparison/: EqualityChecker.ipynb
examples/dates/: BetweenDatesTransformer.ipynb  DateDiffLeapYearTransformer.ipynb  DateDifferenceTransformer.ipynb  DateTimeInfoExtractor.ipynb  DatetimeSinusoidCalculator.ipynb  SeriesDtMethodTransformer.ipynb  ToDatetimeTransformer.ipynb
examples/imputers/: ArbitraryImputer.ipynb  MeanImputer.ipynb  MedianImputer.ipynb  ModeImputer.ipynb  NearestMeanResponseImputer.ipynb  NullIndicator.ipynb
examples/mapping/: CrossColumnAddTransformer.ipynb  CrossColumnMappingTransformer.ipynb  CrossColumnMultiplyTransformer.ipynb  MappingTransformer.ipynb
examples/misc/: SetColumnDTypeTransformer.ipynb  SetValueTransformer.ipynb
examples/nominal/: GroupRareLevelsTransformer.ipynb  MeanResponseTransformer.ipynb  NominalToIntegerTransformer.ipynb  OneHotEncodingTransformer.ipynb  OrdinalEncoderTransformer.ipynb
examples/numeric/: CutTransformer.ipynb  InteractionTransformer.ipynb  LogTransformer.ipynb  PCATransformer.ipynb  ScalingTransformer.ipynb  TwoColumnOperatorTransformer.ipynb
examples/strings/: SeriesStrMethodTransformer.ipynb  StringConcatenator.ipynb
profiling/: create_dataset.py  pipeline_generator.py  profile_helpers.py  profile_tubular.py
tests/: base_tests.py  conftest.py  profile_examples_perf.py  specific_column_type_tests.py  test_columns_dict_transformers.py  test_data.py  test_transformers.py  utils.py
tests/base/: test_BaseTransformer.py  test_BaseTwoColumnTransformer.py  test_DataFrameMethodTransformer.py  test_InteractionTransformer.py  test_ReturnKeyDict.py
tests/capping/: base_capping_tests.py  test_BaseCappingTransformer.py  test_CappingTransformer.py  test_OutOfRangeNullTransformer.py
tests/comparison/: test_EqualityChecker.py
tests/dates/: test_BaseDateTransformer.py  test_BaseDatetimeTransformer.py  test_BaseGenericDateTransformer.py  test_BaseTwocolumnDateTransformer.py  test_BetweenDatesTransformer.py  test_DateDiffLeapYearTransformer.py  test_DateDifferenceTransformer.py  test_DateTimeInfoExtractor.py  test_DatetimeSinusoidCalculator.py  test_SeriesDtMethodTransformer.py  test_ToDatetimeTransformer.py
tests/imputers/: test_ArbitraryImputer.py  test_BaseImputer.py  test_MeanImputer.py  test_ModeImputer.py  (+3 more)
tubular/: __init__.py  _version.py  base.py  capping.py  comparison.py  dates.py  helpers.py  imputers.py  mapping.py  misc.py  mixins.py  nominal.py  numeric.py  strings.py
uml/: mermaid_uml.mmd  mermaid_uml_manual_edits.mmd  plantuml_to_mermaid.py  proposed_option_1.puml  py2uml_output.txt
(+65 files in other folders)
